--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,10 @@ services:
           - MYSQL_DATABASE=unimia
           - MYSQL_USER=mysql_user
           - MYSQL_PASSWORD=mysql_password
+          # Used when query/graph details day by day
+          - N_MONTHS_LONG_TERM=3
+          # Used when query/graph summarizes by hours/days of week
+          - N_MONTHS_SHORT_TERM=1
       # Feel free to enable the healthcheck if you want
       #healthcheck:
           # Replace here with your domain
