--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,9 +24,7 @@ services:
           - MYSQL_DATABASE=unimia
           - MYSQL_USER=mysql_user
           - MYSQL_PASSWORD=mysql_password
-          # Used when query/graph details day by day
-          - N_MONTHS_LONG_TERM=6
-          # Used when query/graph summarizes by hours/days of week
+          # Used to limit the importance of previous months in charts which must show very recent data
           - N_MONTHS_SHORT_TERM=1
           # Google Tag ID (empty if not used)
           - GTAG_ID=
