--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,14 @@
 version: "3.7"
+
+x-common-env: &common-env
+    # Replace here with your timezone
+    TZ: 'Europe/Rome'
+    # Replace here with your mysql credentials
+    MYSQL_HOST: 'mysql'
+    MYSQL_DATABASE: 'unimia'
+    MYSQL_USER: 'mysql_user'
+    MYSQL_PASSWORD: 'mysql_password'
+
 services:
   php:
       restart: always
@@ -18,16 +28,11 @@ services:
               max-file: "1"
               max-size: "10m"
       environment:
-          - TZ=Europe/Rome
-          # Replace here with your mysql credentials
-          - MYSQL_HOST=mysql
-          - MYSQL_DATABASE=unimia
-          - MYSQL_USER=mysql_user
-          - MYSQL_PASSWORD=mysql_password
+          <<: *common-env
           # Used to limit the importance of previous months in charts which must show very recent data
-          - N_MONTHS_SHORT_TERM=1
+          N_MONTHS_SHORT_TERM: 1
           # Google Tag ID (empty if not used)
-          - GTAG_ID=
+          GTAG_ID: ''
       # Feel free to enable the healthcheck if you want
       #healthcheck:
           # Replace here with your domain
@@ -54,33 +59,25 @@ services:
               max-file: "1"
               max-size: "10m"
       environment:
-          - TZ=Europe/Rome
+          <<: *common-env 
           # Replace here with your unimia credentials and login endpoint url
-          - USERNAME=name.surname@studenti.unimi.it
-          - PASSWORD=password
-          - CAS_URL=https://cas.unimi.it/login
+          USERNAME: 'name.surname@studenti.unimi.it'
+          PASSWORD: 'password'
+          CAS_URL: 'https://cas.unimi.it/login'
           # This is the timeout used by the python script which check if unimia is up or down
-          - TIMEOUT=65
-          # Replace here with your mysql credentials
-          - MYSQL_HOST=mysql
-          - MYSQL_DATABASE=unimia
-          - MYSQL_USER=mysql_user
-          - MYSQL_PASSWORD=mysql_password
+          TIMEOUT: 65
           # Replace here with a blacklist of words/phrases (case-insensitive and separed by commas) contained in Unimia which you want to be redacted before to take a screenshot
           # (e.g. your name, surname, phone number, badge number ecc)
           # Please note that this is just an additional security rule. Internally the software already redact personal informations based on their position on the page.
-          - WORD_BLACKLIST=john,doe,1234567890,123456,sicurezza dei sistemi e delle reti informatiche,l-31,f68,piazza del duomo,17,20121,milano,mi
+          WORD_BLACKLIST: 'john,doe,1234567890,123456,sicurezza dei sistemi e delle reti informatiche,l-31,f68,piazza del duomo,17,20121,milano,mi'
   mysql:
       restart: always
       image: mariadb
       command: --default-authentication-plugin=mysql_native_password
       environment:
-          - TZ=Europe/Rome
-          # Replace here with your mysql credentials
-          - MYSQL_ROOT_PASSWORD=mysql_root_password
-          - MYSQL_DATABASE=unimia
-          - MYSQL_USER=mysql_user
-          - MYSQL_PASSWORD=mysql_password
+          <<: *common-env
+          # Replace here with your mysql root password
+          MYSQL_ROOT_PASSWORD: 'mysql_root_password'
       volumes:
           - ./mysql/mysql/:/var/lib/mysql:rw
           - ./mysql/config:/etc/mysql/conf.d:ro
